Upgraded docs + fixed bug with "jumpy" page on url change

--- a/proomka-docs/src/App.css
+++ b/proomka-docs/src/App.css
@@ -47,6 +47,13 @@ body {
   overflow: overlay;
 }
 
+@media (max-width: 720px) {
+  html,
+  body {
+    overflow: unset;
+  }
+}
+
 /*html div {
   overflow: hidden;
 }*/
